--- a/modules/ROOT/pages/building.adoc
+++ b/modules/ROOT/pages/building.adoc
@@ -20,20 +20,16 @@ NOTE: Please check the version for which you want to build.
 
 These instructions are updated to work with the latest version of the ownCloud Client.
 
-[[getting-source-code]]
 == Getting the Source Code
 
 The xref:generic-build-instructions[generic build instructions] pull the latest code directly from GitHub, and work on xref:linux[Linux], xref:macos[Mac OS X], and xref:windows-development-build-mingw[Windows].
 
-[[linux]]
 == Linux
 
-For the published desktop clients we link against QT5 dependencies from our own repositories so that we can have the same versions on all distributions.
-This chapter shows you how to build the client yourself with this setup.
-If you want to use the QT5 dependencies from your system, see the next chapter.
+For the published desktop clients we link against QT5 dependencies from our own repositories so that we can have the same versions on all distributions. This chapter shows you how to build the client yourself with this setup. If you want to use the QT5 dependencies from your system, see the next chapter.
 
-You may wish to use source packages for your Linux distribution, as these give you the exact sources from which the binary packages are built.
-These are hosted on the http://software.opensuse.org/download/package?project=isv:ownCloud:desktop&package=owncloud-client[ownCloud repository from OBS].
+You may wish to use source packages for your Linux distribution, as these give you the exact sources from which the binary packages are built. These are hosted on the 
+http://software.opensuse.org/download/package?project=isv:ownCloud:desktop&package=owncloud-client[ownCloud repository from OBS].
 Go to the http://download.opensuse.org/repositories/isv:/ownCloud:/desktop/[Index of repositories] to see all the Linux client repositories.
 
 [NOTE]
@@ -41,19 +37,17 @@ Go to the http://download.opensuse.org/repositories/isv:/ownCloud:/desktop/[Inde
 To get the `.deb` source packages, add the source repository for your Debian or Ubuntu version, as in the following example for Debian 9:
 
 [source,console]
-....
+----
 # Run as root
 echo 'deb http://download.opensuse.org/repositories/isv:/ownCloud:/desktop/Debian_9.0/ /' >> /etc/apt/sources.list.d/owncloud-client.list
 echo 'deb-src http://download.opensuse.org/repositories/isv:/ownCloud:/desktop/Debian_9.0/ /' >> /etc/apt/sources.list.d/owncloud-client.list
-....
+----
 ====
 
 The above registers the source repository of the released client. There is also `.../desktop:/testing/...` and e.g. `.../desktop:/daily:/2.7/...` for beta versions or daily snapshots.
 
 
-Install the dependencies using the following commands for your specific Linux distribution.
-Make sure the repositories for source packages are enabled.
-These are:
+Install the dependencies using the following commands for your specific Linux distribution. Make sure the repositories for source packages are enabled. These are:
 
 [cols="30%,70%",options="header"]
 |===
@@ -65,37 +59,33 @@ These are:
 
 Follow the xref:generic-build-instructions[generic build instructions], starting with step 2.
 
-[[linux-with-system-dependencies]]
 == Linux with System Dependencies
 
-Build sources from a GitHub checkout with dependencies provided by your Linux distribution.
-While this allows more freedom for development, it does not exactly represent what we ship as packages.
-See above for how to recreate packages from source.
+Build sources from a GitHub checkout with dependencies provided by your Linux distribution. While this allows more freedom for development, it does not exactly represent what we ship as packages. See above for how to recreate packages from source.
 
 [NOTE]
 ====
 To get the source dependencies on Debian and Ubuntu, run the following command:
 
 [source,console]
-....
+----
 sudo apt install qtdeclarative5-dev libinotifytools-dev \
   qt5keychain-dev python-sphinx \
   libsqlite3-dev
-....
+----
 ====
 
 Follow the xref:generic-build-instructions[generic build instructions], starting with step 1.
 
-[[macos]]
 == macOS
 
-In addition to needing Xcode (along with the command line tools), developing in the macOS environment requires extra dependencies.
-You can install these dependencies through http://www.macports.org[MacPorts] or http://mxcl.github.com/homebrew/[Homebrew].
+In addition to needing Xcode (along with the command line tools), developing in the macOS environment requires extra dependencies. You can install these dependencies through
+http://www.macports.org[MacPorts] or http://mxcl.github.com/homebrew/[Homebrew].
 These dependencies are required only on the build machine, because non-standard libs are deployed in the app bundle.
 
 The tested and preferred way to develop in this environment is through the use of http://mxcl.github.com/homebrew/[HomeBrew].
-The ownCloud team has its own repository containing non-standard recipes.
-To set up your build environment for development using http://mxcl.github.com/homebrew/[HomeBrew]:
+The ownCloud team has its own repository containing non-standard recipes. To set up your build environment for development using
+http://mxcl.github.com/homebrew/[HomeBrew]:
 
 . Install https://developer.apple.com/xcode[Xcode].
 . Install Xcode command line tools using `xcode-select --install`.
@@ -131,20 +121,14 @@ TIP: If you want to use Microsoft Visual Studio, naturally, that must be install
 When the dependencies are installed, install KDE Craft using the following lines in PowerShell:
 
 [source,powershell]
-....
+----
 Set-ExecutionPolicy -Scope CurrentUser RemoteSigned
 iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/KDE/craft/master/setup/install_craft.ps1'))
-....
+----
 
-The first command allows running scripts from remote sources.
-The second command starts installing KDE Craft. 
-You are asked where you want to put the main folder, called `CraftRoot`, which will contain all source, build, and install folders.
-Please chose a disk with sufficient free space. 
+The first command allows running scripts from remote sources. The second command starts installing KDE Craft. You are asked where you want to put the main folder, called `CraftRoot`, which will contain all source, build, and install folders. Please chose a disk with sufficient free space. 
 
-Last but not least, you need to chose the compiler you want to use.
-The official builds only supports {ms-visual-studio-2019-url}[Microsoft Visual Studio 2019].
-However, if you're feeling adventurous, you can also try to use {mingw-w64-url}[Mingw-w64]. 
-In contrast to Visual Studio, which you need to install in advance, KDE Craft can install `Mingw-w64` for you.
+Last but not least, you need to chose the compiler you want to use. The official builds only supports {ms-visual-studio-2019-url}[Microsoft Visual Studio 2019]. However, if you're feeling adventurous, you can also try to use {mingw-w64-url}[Mingw-w64]. In contrast to Visual Studio, which you need to install in advance, KDE Craft can install `Mingw-w64` for you.
 
 TIP: Unless you need 32bit builds, you should stick to the default of x64 builds.
 
@@ -162,24 +146,22 @@ To launch the KDE Craft environment, you need to run the following command in Po
 This provides you with a shell with all the environment variables set that you need to work with KDE Craft.
 
 [source,powershell]
-....
+----
 C:\CraftRoot\craft\craftenv.ps1
-....
+----
 
 TIP: This needs to be done every time you want to work with Craft.
 
-NOTE: We're assuming that you installed KDE Craft in the default path of `C:\CraftRoot`. 
-If you have installed it somewhere else, please adjust the path as necessary.
+NOTE: We're assuming that you installed KDE Craft in the default path of `C:\CraftRoot`. If you have installed it somewhere else, please adjust the path as necessary.
 
 ==== Setup the ownCloud repository
 
-The last step before we can begin, is adding the ownCloud repository. 
-It provides you with additional dependencies and tools, which are not available from the standard KDE repository.
+The last step before we can begin, is adding the ownCloud repository. It provides you with additional dependencies and tools, which are not available from the standard KDE repository.
 
 [source,powershell]
-....
+----
 craft --add-blueprint-repository https://github.com/owncloud/craft-blueprints-owncloud.git
-....
+----
 
 TIP: You only need to do this once.
 
@@ -188,21 +170,19 @@ TIP: You only need to do this once.
 Finally we can build the client with the following command:
 
 [source,powershell]
-....
+----
 craft owncloud-client
-....
+----
 
-This installs all required dependencies and builds the ownCloud Client from the `master` git branch.
-If you want to build a different branch, first install all dependencies and then clone the source code from git, like this:
+This installs all required dependencies and builds the ownCloud Client from the `master` git branch. If you want to build a different branch, first install all dependencies and then clone the source code from git, like this:
 
 [source,powershell]
-....
+----
 craft --install-deps owncloud-client
 craft --fetch owncloud-client
-....
+----
 
-You can find the git checkout in `C:\CraftRoot\downloads\git\owncloud\owncloud-client`.
-There you can use the usual git commands to switch branches and remotes, e.g., to build the `2.6` stable branch you can use craft with --set version parameter:
+You can find the git checkout in `C:\CraftRoot\downloads\git\owncloud\owncloud-client`. There you can use the usual git commands to switch branches and remotes, e.g., to build the `{latest-version}` stable branch you can use craft with --set version parameter:
 
 [source,powershell]
 ....
@@ -220,10 +200,7 @@ craft owncloud-client
 
 ==== Run the Client
 
-Neither `craft owncloud-client` nor `craft --configure --make --install` make the ownCloud Client available in your PATH, they only install to the so-called image directory. 
-This is so KDE Craft knows which files belong to which package.
-In order to run the client, you first need to merge the image directory to the regular KDE Craft root (`C:\CraftRoot`).
-Afterwards, you can run `owncloud.exe` from your shell.
+Neither `craft owncloud-client` nor `craft --configure --make --install` make the ownCloud Client available in your PATH, they only install to the so-called image directory.  This is so KDE Craft knows which files belong to which package. In order to run the client, you first need to merge the image directory to the regular KDE Craft root (`C:\CraftRoot`). Afterwards, you can run `owncloud.exe` from your shell.
 
 ```
 craft --qmerge owncloud-client
@@ -244,8 +221,7 @@ Now you should have a file called: `owncloud-client-master-$\{COMMIT_HASH\}-wind
 
 [NOTE]
 ====
-This is not supported, optimised, nor regularly tested!
-Fully supported Windows installers are currently only provided by xref:compiling-via-ownbrander[ownBrander].
+This is not supported, optimised, nor regularly tested! Fully supported Windows installers are currently only provided by xref:compiling-via-ownbrander[ownBrander].
 ====
 
 [[generic-build-instructions]]
