--- a/modules/ROOT/pages/navigating.adoc
+++ b/modules/ROOT/pages/navigating.adoc
@@ -11,27 +11,27 @@
 
 == Used App Icons
 
-image:navigating/icon.png[image]
+image:navigating/icon.png[image-syncok]
 
 The status indicator uses icons to indicate the current status of your synchronization. The green circle with the white checkmark tells you that your synchronization is current and you are connected to your ownCloud server.
 
-image:navigating/icon-syncing.png[image]
+image:navigating/icon-syncing.png[image-syncing]
 
 The blue icon with the white semi-circles means synchronization is in progress.
 
-image:navigating/icon-paused.png[image]
+image:navigating/icon-paused.png[image-paused]
 
 The yellow icon with the parallel lines tells you your synchronization has been paused. (Most likely by you.)
 
-image:navigating/icon-offline.png[image]
+image:navigating/icon-offline.png[image-offline]
 
 The gray icon with three white dots means your Desktop App has lost its connection with your ownCloud server.
 
-image:navigating/icon-information.png[image]
+image:navigating/icon-information.png[image-information]
 
 When you see a white circle with the letter "i" that is the informational icon, so you should click it to see what it has to tell you.
 
-image:navigating/icon-error.png[image]
+image:navigating/icon-error.png[image-error]
 
 The red circle with the white "x" indicates a configuration error, such as an incorrect login or server URL.
 
@@ -39,7 +39,7 @@ The red circle with the white "x" indicates a configuration error, such as an in
 
 A right-click on the systray icon opens a menu for quick access to multiple operations.
 
-image::navigating/menu.png[image, width=60%,pdfwidth=60%]
+image::navigating/menu.png[systray, width=400,pdfwidth=60%]
 
 This menu provides the following options:
 
@@ -54,7 +54,7 @@ This menu provides the following options:
 
 A left-click on your systray icon opens the Desktop App to the account settings window.
 
-image::navigating/client6.png[image, width=60%,pdfwidth=60%]
+image::navigating/client6.png[image, width=600,pdfwidth=60%]
 
 === Configuring ownCloud Account Settings
 
@@ -89,7 +89,7 @@ Stop all sync activity
 Enable virtual file support::
 Enable the virtual file support for an account
 
-image::navigating/client-7.png[The Overflow Menu, width=60%,pdfwidth=60%]
+image::navigating/client-7.png[The Overflow Menu, width=250,pdfwidth=60%]
 
 NOTE: ownCloud does not preserve the mtime (modification time) of directories, though it does update the mtimes on files. See https://github.com/owncloud/core/issues/7009:[Wrong folder date when syncing] for discussion of this.
 
@@ -124,15 +124,15 @@ If a directory includes ignored files that are marked with warning icons that do
 
 The ownCloud Desktop App integrates with your file manager: Finder on Mac OS X, Explorer on Windows, and Nautilus on Linux. (Linux users must install the `owncloud-client-nautilus` plugin.) You can create share links, and share with internal ownCloud users the same way as in your ownCloud Web interface.
 
-image::navigating/mac-share.png[image, width=60%,pdfwidth=60%]
+image::navigating/mac-share.png[image, width=500,pdfwidth=60%]
 
 Right-click your systray icon, hover over the account you want to use, and left-click  menu:Open folder["folder name"] to quickly enter your local ownCloud folder. Right-click the file or folder you want to share to expose the share dialog, and click menu:Share with ownCloud[].
 
-image::navigating/share-1.png[image, width=70%,pdfwidth=70%]
+image::navigating/share-1.png[sharing_1, width=300,pdfwidth=70%]
 
 The share dialog has all the same options as your ownCloud Web interface.
 
-image::navigating/share-2.png[image, width=60%,pdfwidth=60%]
+image::navigating/share-2.png[sharing_2, width=300,pdfwidth=60%]
 
 Use *Share with ownCloud* to see who you have shared with, and to modify their permissions, or to delete the share.
 
@@ -149,7 +149,7 @@ Displays local activities such as which local folders your files went into.
 Not Synced::
 Shows errors such as files not synced because of being excluded or any other failing status.
 
-image::navigating/client-8.png[image, width=60%,pdfwidth=60%]
+image::navigating/client-8.png[not_synced, width=600,pdfwidth=60%]
 
 In Windows, double-clicking an activity entry pointing to an existing file in tabs *Server Activities* or *Sync Protocol*, will open the folder containing the file and highlight it.
 
@@ -163,7 +163,7 @@ The desktop client will display notifications from your ownCloud server that req
 
 For example, when a user on a remote ownCloud creates a new Federated share for you, you can accept it from your desktop client. This also displays notifications sent to users by the ownCloud admin via the Announcements app.
 
-image::navigating/client12.png[image,width=60%,pdfwidth=60%]
+image::navigating/client12.png[server_notifications,width=600,pdfwidth=60%]
 
 == Settings Window
 
@@ -190,7 +190,7 @@ NOTE: Hidden files are files starting with a dot like `.filename.txt`, but not f
 * Ask confirmation before downloading folders larger than [folder size]
 * Ask for confirmation before synchronizing external storages
 
-image::navigating/client-9.png[image, width=60%,pdfwidth=60%]
+image::navigating/client-9.png[advanced, width=600,pdfwidth=60%]
 
 TIP: While you can select whether to show or hide the crash reporter, from the Settings Window, you can also configure whether to show or hide it from the xref:advanced_usage/configuration_file.adoc#section-general[general section of the configuration file] as well. Doing so can help with debugging on-startup-crashes.
 
@@ -214,7 +214,7 @@ The following options are available:
 When activated, the client limits the upload or download bandwidth to 25% of the currently available bandwidth for each operation. The available bandwidth is measured on the fly at the beginning of every operation for a very short period of time.
 * Limit to
 
-image::navigating/settings_network.png[Network Settings,width=60%,pdfwidth=60%]
+image::navigating/settings_network.png[Network Settings,width=600,pdfwidth=60%]
 
 [NOTE]
 ====
@@ -225,7 +225,7 @@ Enabling this feature will affect all new transfers (next upload chunk or next d
 
 You might have some local files or directories that you do not want to backup and store on the server. To identify and exclude these files or directories, you can use the menu:Settings[Advanced > Ignored Files Editor]
 
-image::navigating/ignored_files_editor.png[Ingnored Files Editor,width=60%,pdfwidth=60%]
+image::navigating/ignored_files_editor.png[Ingnored Files Editor,width=350,pdfwidth=60%]
 
 For your convenience, the editor is pre-populated with a default list of typical ignore patterns. These patterns are contained in a system file. (typically `sync-exclude.lst`) located in the ownCloud Client application directory. You cannot modify these pre-populated patterns directly from the editor. However, if necessary, you can hover over any pattern in the list to show the path and filename associated with that pattern, locate the file, and edit the `sync-exclude.lst` file.
 
