update and harmonize text

--- a/modules/ROOT/pages/faq.adoc
+++ b/modules/ROOT/pages/faq.adoc
@@ -3,11 +3,15 @@
 :wordpress1-url: http://petersteier.wordpress.com/2011/10/22/windows-indexer-changes-modification-dates-of-eml-files/
 :user_manual_quota: https://doc.owncloud.com/server/next/user_manual/files/webgui/quota.html
 
-:description: Here you can find some of the most frequently asked questions about the ownCloud Desktop app.
+:description: Here you can find some of the most frequently asked questions about the ownCloud Desktop App.
 
 == Introduction
 
 {description}
+
+== VFS for Windows Server
+
+Without claim of completeness, actuality or support, Windows Server releases that are based on builds starting with 1709 should come with the native system API that is required to use VFS. Windows Servers 2016 and lower do not have native VFS included and will not be able to use VFS therefore.
 
 == Usage
 
