--- a/modules/ROOT/pages/installing.adoc
+++ b/modules/ROOT/pages/installing.adoc
@@ -29,10 +29,9 @@ You can download the latest version of the ownCloud Desktop App from the {deskto
 Depending on the operating system used, some minimum system requirements need to be met. ownCloud provides Linux packages for a variety of Linux distributions, see the list of supported distros below.
 
 Windows::
-* Windows 7+
+* Windows 7 or later
 ** x86 with 32-bit or x86-64 with 64-bit
-** Native WinVFS available for Windows versions 1709 or later. +
-For Windows Server you find the version in `winver` in the second row. The known versions can be identified via the following referenced list: https://en.wikipedia.org/wiki/Windows_Server#Semi-annual_releases_(discontinued)[Semi-annual releases (discontinued)].
+** For xref:vfs.adoc[VFS support], Windows 10 versions 1709 or later.
 
 macOS::
 * macOS 10.12+
